QR codes & Winner table added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,15 +79,15 @@
         <div class="col-md-5 order-2 order-md-1 animate-in-left">
           <img class="img-fluid d-block my-3 mx-auto" src="assets/app/iphone_side_dark.png" width="200"> </div>
         <div class="col-md-7 align-self-center order-1 order-md-2 my-3 text-md-left text-center">
-          <h2>Easy, yet powerful steps to participate </h2>
-          <p class="my-4 ">
+          <h2 class="display-4">Easy YET Powerful <br> Participate & WIN</h2>
+          <p class="my-2 ">
             * Pay the amount to enter into the contest <br>
             * Winner would be announced every 100 minutes
           </p>
-          <a class="btn btn-outline-primary" href="#features">Learn more</a>
+          <a class="btn btn-outline-primary" href="#features">Enter Contest NOW!!</a>
         </div>
       </div>
-      <div class="row pt-5">
+      <!-- <div class="row pt-5">
         <div class="align-self-center col-lg-7 text-md-left text-center">
           <h2>Works everywhere</h2>
           <p class="my-4 text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi t aliquip ex ea commodo consequat. Duis aute
@@ -97,45 +97,109 @@
         </div>
         <div class="align-self-center mt-5 col-lg-5 animate-in-right">
           <img class="img-fluid d-block" src="assets/app/iphone_ipad_dark.png"> </div>
-      </div>
+      </div> -->
     </div>
   </div>
   <!-- Features -->
-  <div class="py-5" id="features">
+  <div class="p-5" id="features">
     <div class="container">
       <div class="row">
         <div class="col-12 text-center">
-          <h2 class="pb-4">Features from the future</h2>
+          <h2 class="pb-4">Get Ready for the show!</h2>
         </div>
       </div>
+
       <div class="row">
         <div class="align-self-center text-md-right text-center col-lg-4 col-md-6">
-          <h4 class="text-primary">Responsive design</h4>
-          <p class="mb-5 text-muted">Based on fluid design principles.
-            <br>Works with any screen resolution</p>
-          <h4 class="text-primary">Customized settings</h4>
-          <p class="mb-5 text-muted">Choose settings depending on the criteria you value the most. With no limits.</p>
-          <h4 class="text-primary">Connect</h4>
-          <p class="mb-5 text-muted">In-app chat panel 24/7 active.
-            <br>The support you need, right there.</p>
+          <img class="img-fluid d-block mx-auto" src="https://cdn.iconscout.com/public/images/icon/free/png-512/paytm-logo-online-payment-brand-35543a485878b8bc-512x512.png" width="40%" height="5">
+          <img class="img-responsive img-fluid d-block" width="50%" style="margin:auto;" src="/images/paytm_upi.png">
         </div>
-        <div class="my-3 col-md-4 d-none d-lg-block animate-in-down">
-          <img class="img-fluid d-block mx-auto" src="assets/app/iphone_features_dark.png" width="300"> </div>
+        <div class="my-3 col-md-4 col-sm-12 col-xs-12 d-lg-block ">
+          <form style="opacity: 0.8;" >
+            <div class="form-group">
+              <label>Name</label>
+              <input type="email" class="form-control" placeholder="Enter your name">
+              <small class="form-text text-muted">All the best..</small>
+            </div>
+            <div class="form-group">
+              <label>Mobile Number (Payment made)</label>
+              <input type="number" class="form-control" placeholder="Enter your paytm number">
+              <small class="form-text text-muted">We'll never share your contact with anyone else.</small>
+            </div>
+            <div class="form-group">
+              <label>Contest entry price paid</label>
+              <input type="number" class="form-control" placeholder="Enter contest amount paid">
+              <small class="form-text text-muted">Get big amount, put in big</small>
+            </div>
+            <div class="form-group">
+              <label>Email address</label>
+              <input type="email" class="form-control" placeholder="Enter email">
+              <small class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <button type="submit" class="btn text-center justify-content-center btn-primary text-capitalize">Submit</button>
+          </form>
+        </div>
         <div class="align-self-center text-md-left text-center col-lg-4 col-md-6">
-          <h4 class="text-primary">Battery-friendly</h4>
-          <p class="mb-5 text-muted">Non consuming background operation for longer mobile life</p>
-          <h4 class="text-primary">Multilayers</h4>
-          <p class="mb-5 text-muted">Work simultaneously on different panels with the switcher</p>
-          <h4 class="text-primary">Share the love</h4>
-          <p class="mb-5 text-muted">Help us spreading the word.
-            <br>Tell your friends with just one-click</p>
+          <img class="img-fluid d-block mx-auto p-2" src="https://crazydealonline.com/wp-content/uploads/2017/09/unnamed-1.png" width="40%">
+          <img class="img-responsive img-fluid d-block" width="50%" style="margin:auto;" src="/images/Tez_upi.png">
         </div>
       </div>
+    </div>
+  </div>
+  <div class="py-5" id="winners">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center">
+          <h2 class="pb-4">Winners of the contest!</h2>
+        </div>
+      </div>
+      <div class="py-5" >
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>#</th>                <th>Winner's Name</th>                <th>Entry Amount </th>                <th>Mobile </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>Prabhjot Singh</td>
+                <td>251</td>
+                <td>980-XXXX-800</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Jacob Thornton</td>
+                <td>101</td>
+                <td>998-XXXX-582</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>Larry</td>
+                <td>51</td>
+                <td>989-XXXX-555</td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>Cherry</td>
+                <td>11</td>
+                <td>989-XXXX-558</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
     </div>
   </div>
   <!-- Features -->
   <!-- Carousel reviews -->
-  <div class="pb-5 section text-center" id="reviews">
+  <!-- <div class="pb-5 section text-center" id="reviews">
     <div class="container">
       <hr>
       <div class="row pt-5">
@@ -168,7 +232,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- Call to action -->
   <div class="py-5 bg-primary" id="download">
     <div class="container">
@@ -177,7 +241,7 @@
           <img class="img-fluid d-block my-4 animate-slide-in" src="assets/app/iphone_isometric_dark.png"> </div>
         <div class="col-md-6 align-self-center text-center text-md-left">
           <h1>
-            <b>Download Pingendo</b>
+            <b>Download CoinForCash</b>
           </h1>
           <p class="lead text-dark">
             <b class="text-white">Get it on your mobile device right now</b>
@@ -226,7 +290,7 @@
       </div>
       <div class="row">
         <div class="col-12 my-3 text-center">
-          <p class="text-muted">© Copyright 2018 Pingendo - All rights reserved.</p>
+          <p class="text-muted">© Copyright 2018 CoinForCash - All rights reserved.</p>
         </div>
       </div>
     </div>
