--- a/views/index.ejs
+++ b/views/index.ejs
@@ -115,25 +115,25 @@
           <img class="img-responsive img-fluid d-block" width="50%" style="margin:auto;" src="/images/paytm_upi.png">
         </div>
         <div class="my-3 col-md-4 col-sm-12 col-xs-12 d-lg-block ">
-          <form style="opacity: 0.8;" >
+          <form style="opacity: 0.8;" method="post" action="/register">
             <div class="form-group">
               <label>Name</label>
-              <input type="email" class="form-control" placeholder="Enter your name">
+              <input name="name" type="name" class="form-control" placeholder="Enter your name">
               <small class="form-text text-muted">All the best..</small>
             </div>
             <div class="form-group">
               <label>Mobile Number (Payment made)</label>
-              <input type="number" class="form-control" placeholder="Enter your paytm number">
+              <input name="mobile" type="number" class="form-control" placeholder="Enter your paytm number">
               <small class="form-text text-muted">We'll never share your contact with anyone else.</small>
             </div>
             <div class="form-group">
               <label>Contest entry price paid</label>
-              <input type="number" class="form-control" placeholder="Enter contest amount paid">
+              <input name="amount" type="number" class="form-control" placeholder="Enter contest amount paid">
               <small class="form-text text-muted">Get big amount, put in big</small>
             </div>
             <div class="form-group">
               <label>Email address</label>
-              <input type="email" class="form-control" placeholder="Enter email">
+              <input name="email" type="email" class="form-control" placeholder="Enter email">
               <small class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <button type="submit" class="btn text-center justify-content-center btn-primary text-capitalize">Submit</button>
