Price Entry Table added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -117,12 +117,52 @@
       </div>
 
       <div class="row">
-        <div class="align-self-center text-md-right text-center col-lg-4 col-md-6">
-          <img class="img-fluid d-block mx-auto" src="https://cdn.iconscout.com/public/images/icon/free/png-512/paytm-logo-online-payment-brand-35543a485878b8bc-512x512.png" width="40%" height="5">
-          <img class="img-responsive img-fluid d-block" width="50%" style="margin:auto;" src="/images/paytm_upi.png">
+        <div class="align-self-center text-md-left col-lg-4 col-md-6">
+          <!-- <img class="img-fluid d-block mx-auto" src="https://cdn.iconscout.com/public/images/icon/free/png-512/paytm-logo-online-payment-brand-35543a485878b8bc-512x512.png" width="40%" height="5"> -->
+          <!-- <img class="img-responsive img-fluid d-block" width="50%" style="margin:auto;" src="/images/paytm_upi.png"> -->
+          <h2 class="pb-4">Rules :</h2>
+          <p>
+            1. For contest denomination &#8377;100, &#8377;200, & &#8377;300<br>
+               every participants will get consolation money.<br>
+            2. For contest denomination &#8377;10, &#8377;20, & &#8377;30
+              <br> participants will not get any consolation money.<br>
+            <div>
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>Entry Amount </th>
+                    <th>Winning Amount</th>
+                    <th>Participant gets </th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>1</td>
+                    <td>₹100</td>
+                    <td>₹1000</td>
+                    <td>₹10</td>
+                  </tr>
+                  <tr>
+                    <td>2</td>
+                    <td>₹200</td>
+                    <td>₹2000</td>
+                    <td>₹20</td>
+                  </tr>
+                  <tr>
+                    <td>3</td>
+                    <td>₹300</td>
+                    <td>₹5000</td>
+                    <td>₹100</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            * Money will get deposited in next 24 working hours.
+          </p>
         </div>
         <div class="my-3 col-md-4 col-sm-12 col-xs-12 d-lg-block ">
-          <form style="opacity: 0.8;" method="post" action="/register" target="_self" >
+          <form style="opacity: 0.9;" method="post" action="/register" target="_self" >
             <div class="form-group">
               <label>Name</label>
               <input name="name" type="text" pattern="[a-z A-Z]+" class="form-control" placeholder="Enter your name" required>
@@ -147,12 +187,16 @@
           </form>
         </div>
         <div class="align-self-center text-md-left text-center col-lg-4 col-md-6">
-          <img class="img-fluid d-block mx-auto p-2" src="https://crazydealonline.com/wp-content/uploads/2017/09/unnamed-1.png" width="40%">
-          <img class="img-responsive img-fluid d-block" width="50%" style="margin:auto;" src="/images/Tez_upi.png">
+          <!-- <img class="img-fluid d-block mx-auto p-2" src="https://crazydealonline.com/wp-content/uploads/2017/09/unnamed-1.png" width="40%"> -->
+          <!-- <img class="img-responsive img-fluid d-block" width="50%" style="margin:auto;" src="/images/Tez_upi.png"> -->
         </div>
       </div>
     </div>
   </div>
+
+  <img class="img-fluid d-block mx-auto p-2" src="/images/money_jars/jar_500.jpg" width="40%">
+
+  
   <div class="py-5" id="winners">
     <div class="container">
       <div class="row">
