--- a/views/index.ejs
+++ b/views/index.ejs
@@ -175,7 +175,7 @@
             </div>
             <div class="form-group">
               <label>Contest entry price paid</label>
-              <input name="amount" type="number" class="form-control" placeholder="Enter contest amount paid" required>
+              <input name="amount" type="number" pattern="^[123][0]{1,2}$" min="10" max="300" step="10" title="Only 10,20,30,100,200 and 300 allowed" class="form-control" placeholder="Only 10,20,30,100,200 and 300 allowed" required>
               <small class="form-text text-muted">Get big amount, put in big</small>
             </div>
             <div class="form-group">
@@ -193,10 +193,8 @@
       </div>
     </div>
   </div>
-
-  <img class="img-fluid d-block mx-auto p-2" src="/images/money_jars/jar_500.jpg" width="40%">
-
   
+
   <div class="py-5" id="winners">
     <div class="container">
       <div class="row">
