--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -22,12 +21,6 @@
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="/javascripts/flipclock.min.js"></script>
   <script type="text/javascript" src="/javascripts/custom.js"></script>
-  <script>
-    function check(){
-      console.log("in check...");
-      console.log(Response.status);     
-      // event.preventDefault();
-    }
   </script>
 </head>
 
@@ -35,11 +28,14 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#"><h2>Coin For Cash</h2></a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="#">
+        <h2>Coin For Cash</h2>
+      </a>
+      <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent"
+        aria-controls="navbar2SupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <!-- <div class="collapse navbar-collapse text-center justify-content-end" id="navbar2SupportedContent">
+      <div class="collapse navbar-collapse text-center justify-content-end" id="navbar2SupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item mx-2">
             <a class="nav-link" href="#features">Features</a>
@@ -61,20 +57,10 @@
           <p class="lead">Play the draw & check what your fate have for you!!
             <br>
           </p>
-          <!-- <div class="row mt-5">
-            <div class="col-6 col-lg-4">
-              <a href="#">
-                <img class="center-block img-fluid d-block shadowed" src="assets/app/download_android.png"> </a>
-            </div>
-            <div class="col-6 col-lg-4">
-              <a href="#">
-                <img class="center-block img-fluid d-block shadowed" src="assets/app/download_ios.png"> </a>
-            </div>
-          </div> -->
         </div>
-        <div class="col-lg-6 col-sm-12 text-center" >
+        <div class="col-lg-6 col-sm-12 text-center">
           <h1 style="margin-bottom:40px;">Next BIG winner in </h1>
-            <div class="clock col-sm-12" ></div>
+          <div class="clock col-sm-12"></div>
         </div>
       </div>
     </div>
@@ -86,25 +72,15 @@
         <div class="col-md-5 order-2 order-md-1 animate-in-left">
           <img class="img-fluid d-block my-3 mx-auto" src="assets/app/iphone_side_dark.png" width="200"> </div>
         <div class="col-md-7 align-self-center order-1 order-md-2 my-3 text-md-left text-center">
-          <h2 class="display-4">Easy YET Powerful <br> Participate & WIN</h2>
+          <h2 class="display-4">Easy YET Powerful
+            <br> Participate & WIN</h2>
           <p class="my-2 ">
-            * Pay the amount to enter into the contest <br>
-            * Winner would be announced every 100 minutes
+            * Pay the amount to enter into the contest
+            <br> * Winner would be announced every 100 minutes
           </p>
           <a class="btn btn-outline-primary" href="#features">Enter Contest NOW!!</a>
         </div>
       </div>
-      <!-- <div class="row pt-5">
-        <div class="align-self-center col-lg-7 text-md-left text-center">
-          <h2>Works everywhere</h2>
-          <p class="my-4 text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi t aliquip ex ea commodo consequat. Duis aute
-            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a class="btn btn-primary shadowed"
-            href="#download">Download</a>
-        </div>
-        <div class="align-self-center mt-5 col-lg-5 animate-in-right">
-          <img class="img-fluid d-block" src="assets/app/iphone_ipad_dark.png"> </div>
-      </div> -->
     </div>
   </div>
   <!-- Features -->
@@ -121,48 +97,41 @@
           <!-- <img class="img-fluid d-block mx-auto" src="https://cdn.iconscout.com/public/images/icon/free/png-512/paytm-logo-online-payment-brand-35543a485878b8bc-512x512.png" width="40%" height="5"> -->
           <!-- <img class="img-responsive img-fluid d-block" width="50%" style="margin:auto;" src="/images/paytm_upi.png"> -->
           <h2 class="pb-4">Rules :</h2>
-          <p>
-            1. For contest denomination &#8377;100, &#8377;200, & &#8377;300<br>
-               every participants will get consolation money.<br>
-            2. For contest denomination &#8377;10, &#8377;20, & &#8377;30
-              <br> participants will not get any consolation money.<br>
-            <div>
-              <table class="table">
-                <thead>
+          <div>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Entry Amount </th>
+                  <th>Winning Amount</th>
+                  <th>Participant gets </th>
+                </tr>
+              </thead>
+              <tbody>
+                <% for(var i=0; i < 6; i++) { %>
                   <tr>
-                    <th>#</th>
-                    <th>Entry Amount </th>
-                    <th>Winning Amount</th>
-                    <th>Participant gets </th>
+                    <td>
+                      <%= i+1 %>
+                    </td>
+                    <td>
+                      <%= "₹ "+ rules.amount[i] %>
+                    </td>
+                    <td>
+                      <%= "₹ "+rules.won[i] %>
+                    </td>
+                    <td>
+                      <%= "₹ "+rules.participate[i] %>
+                    </td>
                   </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>1</td>
-                    <td>₹100</td>
-                    <td>₹1000</td>
-                    <td>₹10</td>
-                  </tr>
-                  <tr>
-                    <td>2</td>
-                    <td>₹200</td>
-                    <td>₹2000</td>
-                    <td>₹20</td>
-                  </tr>
-                  <tr>
-                    <td>3</td>
-                    <td>₹300</td>
-                    <td>₹5000</td>
-                    <td>₹100</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            * Money will get deposited in next 24 working hours.
-          </p>
+                  <% } %>
+              </tbody>
+            </table>
+          </div>
+          * Money will get deposited in next 24 working hours.
+          <!-- </p> -->
         </div>
         <div class="my-3 col-md-4 col-sm-12 col-xs-12 d-lg-block ">
-          <form style="opacity: 0.9;" method="post" action="/register" target="_self" >
+          <form style="opacity: 0.9;" method="post" action="/register" target="_self">
             <div class="form-group">
               <label>Name</label>
               <input name="name" type="text" pattern="[a-z A-Z]+" class="form-control" placeholder="Enter your name" required>
@@ -175,7 +144,8 @@
             </div>
             <div class="form-group">
               <label>Contest entry price paid</label>
-              <input name="amount" type="number" pattern="^[123][0]{1,2}$" min="10" max="300" step="10" title="Only 10,20,30,100,200 and 300 allowed" class="form-control" placeholder="Only 10,20,30,100,200 and 300 allowed" required>
+              <input name="amount" type="number" pattern="^[123][0]{1,2}$" min="10" max="300" step="10" title="Only 10,20,30,100,200 and 300 allowed"
+                class="form-control" placeholder="Only 10,20,30,100,200 and 300 allowed" required>
               <small class="form-text text-muted">Get big amount, put in big</small>
             </div>
             <div class="form-group">
@@ -183,17 +153,25 @@
               <input name="email" type="email" class="form-control" placeholder="Enter email" required>
               <small class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
-            <button type="submit" onclick="check();" class="btn text-center justify-content-center btn-primary text-capitalize">Submit</button>
+            <button type="submit" class="btn text-center justify-content-center btn-primary text-capitalize">Submit</button>
           </form>
         </div>
         <div class="align-self-center text-md-left text-center col-lg-4 col-md-6">
           <!-- <img class="img-fluid d-block mx-auto p-2" src="https://crazydealonline.com/wp-content/uploads/2017/09/unnamed-1.png" width="40%"> -->
-          <!-- <img class="img-responsive img-fluid d-block" width="50%" style="margin:auto;" src="/images/Tez_upi.png"> -->
+          <div style="margin-bottom: 10px;padding: 5px;">
+            <h4 style="text-align: center;">Pay Using Paytm</h2>
+              <img class="img-responsive img-fluid d-block" width="50%" style="margin:auto;" src="/images/paytm_upi.png">
+          </div>
+          <hr>
+          <div style="margin-top: 10px;padding: 5px;">
+            <h4 style="text-align: center;">Pay Using Tez</h2>
+              <img class="img-responsive img-fluid d-block" width="50%" style="margin:auto;" src="/images/Tez_upi.png">
+          </div>
         </div>
       </div>
     </div>
   </div>
-  
+
 
   <div class="py-5" id="winners">
     <div class="container">
@@ -202,37 +180,52 @@
           <h2 class="pb-4">Winners of the contest!</h2>
         </div>
       </div>
-      <div class="py-5" >
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <table class="table">
-            <thead>
-              <tr>
-                <th>#</th>                <th>Winner's Name</th>                <th>Entry Amount </th>                <th>Mobile </th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>Prabhjot Singh</td>
-                <td>251</td>
-                <td>980-XXXX-800</td>
-              </tr>
-              <% for(var i=0; i < winTable.length; i++) { %>
-              <tr>
-                <td><%= i+1 %></td>
-                <td><%= winTable[i].name %></td>
-                <td><%= winTable[i].amount %></td>
-                <td><%= winTable[i].mobile %></td>
-              </tr>
-              <% } %>
-            </tbody>
-          </table>
+      <div class="py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>Winner's Name</th>
+                    <th>Entry Amount </th>
+                    <th>Winning Amount </th>
+                    <th>Mobile </th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% for(var i=0; i < winTable.length; i++) { %>
+                    <tr>
+                      <td>
+                        <%= i+1 %>
+                      </td>
+                      <td>
+                        <%= winTable[i].name %>
+                      </td>
+                      <td>
+                        <%= winTable[i].amount %>
+                      </td>
+                      <% if(winTable[i].amount === 100){ %>
+                        <td>1000</td>
+                        <% } %>
+                          <% if(winTable[i].amount === 200){ %>
+                            <td>2000</td>
+                            <% } %>
+                              <% if(winTable[i].amount === 300){ %>
+                                <td>5000</td>
+                                <% } %>
+                                  <td>
+                                    <%= winTable[i].mobile %>
+                                  </td>
+                    </tr>
+                    <% } %>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
 
     </div>
   </div>
@@ -336,28 +329,34 @@
   </div>
   <!-- JavaScript dependencies -->
   <!-- <script src="https://code.jquery.com/jquery-3.2.1.js"></script> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
   <!-- Script: Smooth scrolling between anchors in the same page -->
   <script src="javascripts/smooth-scroll.js"></script>
   <script type="text/javascript">
     var clock;
-    $(document).ready(function() {
+    $(document).ready(function () {
       let dateNow = new Date();
       let countDown = ((23 - dateNow.getHours()) * 60 * 60) + ((60 - dateNow.getMinutes()) * 60) + (60 - dateNow.getSeconds());
       clock = $('.clock').FlipClock(countDown, {
         clockFace: 'DailyCounter',
         countdown: true,
         autoStart: true,
-        showDay:false,
+        showDay: false,
         callbacks: {
-          start: function() {
+          start: function () {
             $('.message').html('The clock has started!');
           }
         }
       });
-      //TODO: countdown 0, fetch winners
+
       hideHours();
+
+      if (countDown < 60) {
+        fetchWinners();
+      }
     });
   </script>
 </body>
