mobile images updated

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,9 @@
   <div class="py-5">
     <div class="container">
       <div class="row py-5">
-        <div class="col-md-12 align-self-center order-1 order-md-4 my-3 text-md-center text-center">
+        <div class="col-md-5 order-2 order-md-1 animate-in-left">
+          <img class="img-fluid d-block my-3 mx-auto" src="assets/app/iphone_side_dark.png" width="200"> </div>
+        <div class="col-md-7 align-self-center order-1 order-md-2 my-3 text-md-left text-center">
           <h2 class="display-4">Easy YET Powerful
             <br> Participate & WIN</h2>
           <p class="my-3">
