--- a/views/success.ejs
+++ b/views/success.ejs
@@ -73,10 +73,11 @@
         <div class="col-md-8 align-self-center order-1 order-md-2 my-3 text-md-left text-center">
           <h2 class="display-4">Thanks For Participating <br> Entry Received.</h2>
           <p class="my-2 ">
-            * Pay the amount to enter into the contest <br>
-            * Winner would be announced every 100 minutes <br>
-            * You can give your enteries as much as you want <br>
-            * More Enteries more chances of winning <br>
+             * Pay the amount to enter into the contest
+            <br> * Winner would be announced every 12 hours
+            <br> * From each category, 10 winners will won amount price
+            <br> * Give more enteries to create your own FORTUNE..
+            <br>
           </p>
           <a class="btn btn-outline-primary" href="/">Enter Contest AGAIN!!</a>
         </div>
