--- a/views/success.ejs
+++ b/views/success.ejs
@@ -75,7 +75,7 @@
           <p class="my-2 ">
              * Pay the amount to enter into the contest
             <br> * Winner would be announced every 12 hours
-            <br> * From each category, 10 winners will won amount price
+            <br> * From each category, 10 winners will win the amount price
             <br> * Give more enteries to create your own FORTUNE..
             <br>
           </p>
