helmet, compression, minifyHTML + SiteView Count added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <h2>Coin For Cash</h2>
+        <h2>Coin4Cash</h2>
       </a>
     </div>
   </nav>
@@ -52,7 +52,7 @@
   <div class="py-5">
     <div class="container">
       <div class="row py-5">
-        <div class="col-md-5 order-2 order-md-1 animate-in-left">
+        <div class="col-md-5 d-none d-sm-block  order-2 order-md-1 animate-in-left">
           <img class="img-fluid d-block my-3 mx-auto" src="assets/app/iphone_side_dark.png" width="200"> </div>
         <div class="col-md-7 align-self-center order-1 order-md-2 my-3 text-md-left text-center">
           <h2 class="display-4">Easy YET Powerful
@@ -61,7 +61,7 @@
             * Pay the amount to enter into the contest<br>
             * Winner would be announced every 12 hours<br>
             * From each category, 10 winners will won amount price<br>
-            * Give more enteries to create your own FORTUNE..<br>
+            * Give more enteries to create your own FORTUNE...<br>
           </p>
           <a class="btn btn-outline-primary" href="#features">Enter Contest NOW!!</a>
         </div>
@@ -151,9 +151,9 @@
             </div>
             <h4 style="text-align: center;">Paytm / Tez : 9805830800</h4>
           <hr>
-          <div style="margin-top: 10px;padding: 5px;">
+          <div class="my-3" style=" margin-top: 10px;padding: 5px;">
             <h4 style="">Steps:</h2>
-              <p>
+              <p class="my-3" style="font-size: 0.7em;">
                 1. Click on QR code<br>
                 2. open image with Paytm App <br>
                 3. Pay entry amount <br>
@@ -227,7 +227,7 @@
     </div>
   </div>
     <!-- Call to action -->
-  <div class="py-5 bg-primary" id="download">
+  <div class="py-5 bg-primary  d-none d-sm-block" id="download">
     <div class="container">
       <div class="row">
         <div class="col-md-6 animate-in-left">
@@ -250,7 +250,7 @@
     </div>
   </div>
   <!-- Footer -->
-  <div class="py-5 bg-dark">
+  <div class="py-5 bg-dark  d-none d-sm-block">
     <div class="container">
       <div class="row">
         <div class="col-md-9">
