Refactor index.ejs code

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,21 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- PAGE settings -->
   <link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
-  <title>CoinForCash - Play your Luck!!</title>
-  <meta name="description" content="CoinForCash - Play your Luck!!">
+  <title>Coin4Cash - Play your Luck!!</title>
+  <meta name="description" content="Coin4Cash - Play your Luck!!">
   <meta name="keywords" content="lottery, money, make-money, paytm, cash">
   <!-- CSS dependencies -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css"> -->
   <link rel="stylesheet" href="neon.css">
-  <!-- Script: Make my navbar transparent when the document is scrolled to top -->
-  <script src="javascripts/navbar-ontop.js"></script>
-  <!-- Script: Animated entrance -->
-  <script src="javascripts/animate-in.js"></script>
   <link rel="stylesheet" href="/stylesheets/flipclock.css">
   <link rel="stylesheet" href="/stylesheets/style.css">
+
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="/javascripts/flipclock.min.js"></script>
-  <script src="/javascripts/custom.js"></script>
+  <script async src="javascripts/navbar-ontop.js"></script>
+  <script async src="/javascripts/flipclock.min.js"></script>
+  <script async src="javascripts/animate-in.js"></script>
+  <script async src="/javascripts/custom.js"></script>
 </head>
 
 <body>
@@ -286,12 +285,12 @@
   </div>
   <!-- JavaScript dependencies -->
   <!-- <script src="https://code.jquery.com/jquery-3.2.1.js"></script> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script> -->
+  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script> -->
   <!-- Script: Smooth scrolling between anchors in the same page -->
-  <script src="javascripts/smooth-scroll.js"></script>
+  <script async src="javascripts/smooth-scroll.js"></script>
   <script type="text/javascript">
     var clock;
     $(document).ready(function () {
